Added: API-Proxy in gateway.
