# apps/backend/auth-service/src/controllers/health.controller.ts
@@ -1,0 +1,14 @@
+import sendResponse from "@/src/utils/sent-responst";
+import { Controller, Get, Route } from "tsoa";
+
+@Route('v1/auth')
+export class HealthController extends Controller {
+  @Get("/health")
+  public async getHealth(): Promise<{ message: string }> {
+    try {
+      return sendResponse({ message: 'OK' })
+    } catch (error) {
+      throw error;
+    }
+  }
+}
